fixed contact page socials spacing

--- a/index.css
+++ b/index.css
@@ -1407,14 +1407,14 @@ section {
     font-family: migra, sans-serif;
     color:#D6D6D6;
     margin-right:10%;
-    margin-bottom:5%;
+    margin-bottom:10%;
 }
 
 .contact-container2 {
     font-family: migra, sans-serif;
     color:#D6D6D6;
     margin-left: 10%;
-    margin-bottom:5%;
+    margin-bottom:10%;
 }
 
 .contact-title {
